add markdown support

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"homepage": "https://github.com/mininmobile/manex#readme",
 	"dependencies": {
 		"electron": "^4.0.5",
+		"markdown-it": "^8.4.2",
 		"matrix-js-sdk": "^1.0.0",
 		"open": "0.0.5"
 	}
